--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,211 @@
-@media screen and (width >= 320px) {
-	#some-id {
-		color: red;
-	}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@media screen and (width >= 500px) {
-	#some-id {
-		color: red;
-	}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #EDE9D5;
+    color: #000000;
+    line-height: 1.6;
+    padding: 20px;
+}
+
+.container, .note-section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.logo-section {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.logo {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+}
+
+.title-section {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.title-section h1 {
+    font-size: 35px;
+    color: #000000;
+}
+
+.instructions-section,
+.ingredients-section,
+.note-section {
+    background-color: #D7EBEF;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.instructions-section,
+.ingredients-section, .note-section {
+    background-color: #D7EBEF;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.note-section {
+    background-color: #D8D8D8;
+}
+
+.instructions-section ul,
+.ingredients-section ol,
+.note-section ol {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.ingredients-section ol,
+.note-section ol {
+    list-style-type: decimal;
+    padding-left: 20px;
+}
+
+h1, h2, h3, h4 {
+    font-family: "Caprasimo", serif;
+    font-style: normal;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 36px;
+}
+
+h3 {
+    font-size: 32px;
+}
+
+h4 {
+    font-size: 24px;
+}
+
+.instructions-section h2,
+.ingredients-section h2,
+.paragraph-section h2 {
+    font-size: 25px;
+    color: #000000;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.paragraph-section {
+    font-family: 'Helvetica Neue', serif;
+    font-size: 18px;
+}
+
+.paragraph-section p {
+    margin-bottom: 20px;
+    color: #000000;
+}
+
+.paragraph-section img {
+    width: 100%;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+
+.intro-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #EDE9D5;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.profile-photo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.stars {
+    display: flex;
+    justify-content: center;
+    color: hsl(47, 92%, 53%);
+    font-size: 1.5em;
+}
+
+.intro-section h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.intro-section p {
+    font-size: 1em;
+    color: #000000;
+}
+
+/* 针对iPhone SE 屏幕（375px宽度左右） */
+@media screen and (max-width: 375px) {
+    .container {
+        max-width: 50%;
+        padding: 10px;
+    }
+    .logo {
+        max-width: 90%;
+    }
+    .title-section h1 {
+        font-size: 25px;
+    }
+    .intro-section h3 {
+        font-size: 1.2em;
+    }
+    .intro-section p {
+        font-size: 0.9em;
+    }
+    .profile-photo {
+        width: 80px;
+        height: 80px;
+    }
+    .stars {
+        font-size: 1.2em;
+    }
+}
+
+/* 针对 MacBook Air 屏幕（1440px宽度左右） */
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 800px;
+        padding: 10px;
+    }
+    .logo {
+        max-width: 800px;
+    }
+    .title-section h1 {
+        font-size: 35px;
+    }
+    .intro-section h3 {
+        font-size: 1.5em;
+    }
+    .intro-section p {
+        font-size: 1em;
+    }
+    .profile-photo {
+        width: 100px;
+        height: 100px;
+    }
+    .stars {
+        font-size: 1.5em;
+    }
 }
