--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,12 +41,13 @@ body {
 }
 
 .instructions-section,
-.ingredients-section, .note-section {
+.ingredients-section,
+.note-section {
     background-color: #D7EBEF;
-    padding: 20px;
+    padding: 30px; /* 将所有部分的padding设置为20px，与note-section保持一致 */
     border-radius: 10px;
     margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .note-section {
